lintian (2.2.1) UNRELEASED; urgency=low

  * checks/shared-libs.desc:
    + [RA] Add references to the UsingSymbolsFiles wiki page in the tags
      requesting generation of a symbols file.

 -- Russ Allbery <rra@debian.org>  Sun, 25 Jan 2009 12:51:40 -0800

lintian (2.2.0) unstable; urgency=low

  * Summary of tag changes:
    + Added
      - direct-changes-in-diff-but-no-patch-system (pedantic)
      - no-homepage-field (pedantic)
      - no-upstream-changelog (pedantic)
      - package-depends-on-hardcoded-libc
      - weak-dependency-on-misc-depends

  * checks/*.desc:
    + [RA] Replace `' "balanced" quotes with straight double-quotes.  The
      old style looks strange with modern fonts.  Based on work by Raphael
      Geissert.
  * checks/binaries:
    + [FL] Fix check for directories in the package in RPATH check.
  * checks/changelog-file{,.desc}:
    + [RA] Use Lintian::Collect to read the changelog.
    + [RA] Enable no-upstream-changelog as a pedantic check, since it's
      often incorrect for multiple binary packages generated from the same
      source.  Patch from Raphael Geissert.  (Closes: #470912)
  * checks/control-file{,.desc}:
    + [ADB] Fix a typo ("arne't").  Thanks, Raphael Geissert.
    + [RA] Check for hard-coded package dependencies on libc.  Patch from
      Evgeni Golov.  (Closes: #512196)
    + [RA] Check package-depends-on-itself for Suggests as well.
  * checks/debhelper{,.desc}:
    + [ADB] Remove no longer required "Type" fields from a couple of
      entries.  Thanks, Raphael Geissert.
    + [ADB] Fix a couple of typoes.  Thanks, Raphael Geissert.
    + [RA] Allow ${misc:Depends} in Pre-Depends and warn of
      ${misc:Depends} in Recommends or Suggests.  Patch from Raphael
      Geissert.  (Closes: #512478)
  * checks/fields{,.desc}:
    + [RA] Add pedantic check for no Homepage control field.  Patch from
      Raphael Geissert.
  * checks/files:
    + [RA] Add swfobject.js to embedded-javascript-library.  Thanks, Paul