@@ -1,0 +1,28 @@
+#!/usr/bin/make -f
+#
+# We can't use dh rule minimization, since that intentionally disables the
+# check that we're testing.
+
+build:
+install:
+
+clean:
+	dh_testdir
+	dh_testroot
+	[ ! -f Build ] || $(PERL) Build --allow_mb_mismatch 1 distclean
+	dh_clean
+
+binary: binary-arch binary-indep
+binary-arch:
+binary-indep:
+	dh_testdir
+	dh_testroot
+	dh_installchangelogs
+	dh_installdocs
+	dh_link
+	dh_compress
+	dh_fixperms
+	dh_installdeb
+	dh_gencontrol
+	dh_md5sums
+	dh_builddeb
