@@ -1,5 +1,9 @@
 lintian (2.2.1) UNRELEASED; urgency=low
 
+  * checks/fields:
+    + [RA] Allow but do not require a libmodule-build-perl dependency if
+      the Build script is referenced in clean.  Thanks, Charles Plessy and
+      gregor herrmann.  (Closes: #421549)
   * checks/shared-libs.desc:
     + [RA] Add references to the UsingSymbolsFiles wiki page in the tags
       requesting generation of a symbols file.
